# nacre

./: .gitignore  Cargo.toml  README.md  out.s  test.c  test.na  test.roo
nacre/: Cargo.toml
nacre/benches/: std.rs
nacre/src/: main.rs
nacre/std/: test.na
nacre/tests/: compile.rs  std.rs
nacre/tests/compile/: and.c  and.na  not.c  not.na  option_map.c  option_map.na  pair_build.c  pair_build.na  pair_left.c  pair_left.na  test.c  test.na
nacre_ast/: Cargo.toml
nacre_ast/src/: ast.rs  lexer.rs  lib.rs  preprocess.rs
nacre_ast/src/operators/: application.rs  arrow.rs  mod.rs  namespace.rs  prototype.rs
nacre_cache/: Cargo.toml
nacre_cache/src/: lib.rs
nacre_compiler/: Cargo.toml
nacre_compiler/src/: base.rs  code_transforms.rs  codegen.rs  lib.rs  pass_cleanup.rs  pass_declosure.rs  pass_specialize.rs  pass_uncurry.rs  typing.rs
nacre_kernel/: Cargo.toml
nacre_kernel/examples/: fuzz_consistency.rs
nacre_kernel/src/: conversion.rs  defs.rs  error.rs
nacre_parser/: Cargo.toml
nacre_parser/src/: kernel.rs  kernel_err.rs  lib.rs  path.rs  semantics.rs
nacre_types/: Cargo.toml
rooster/: Cargo.toml
rooster/benches/: std.rs
rooster/src/: main.rs
rooster/std/: axioms.roo
rooster/tests/: std.rs
rooster_ast/: Cargo.toml
rooster_ast/src/: ast.rs  lexer.rs  parser.rs  preprocess.rs
rooster_ast/src/operators/: application.rs  arrow.rs  mod.rs  namespace.rs  prototype.rs
rooster_cache/: Cargo.toml
rooster_cache/src/: lib.rs
rooster_kernel/: Cargo.toml
rooster_kernel/examples/: fuzz_consistency.rs
rooster_kernel/src/: conversion.rs  defs.rs  error.rs  lib.rs  typing.rs  wf.rs
rooster_parser/: Cargo.toml
rooster_parser/src/: cache.rs  kernel.rs  kernel_err.rs  lexer.rs  lib.rs  operators.rs  parser.rs  parser2.rs  path.rs  preprocess.rs  report.rs  semantics.rs
rooster_parser/src/operators/: application.rs  arrow.rs  mod.rs  namespace.rs  prototype.rs
rooster_types/: Cargo.toml
rooster_types/src/: lib.rs
std/: axioms.roo  logic.roo
