[workspace]
members = ["rooster", "rooster_ast", "rooster_cache", "rooster_kernel", "rooster_parser", "rooster_types"]
resolver = "2"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
strip = true
