[workspace]
members = ["nacre", "nacre_ast", "nacre_cache", "nacre_compiler", "nacre_kernel", "nacre_parser", "nacre_types"]
resolver = "2"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
strip = true
