[package]
name = "nacre"
version = "0.1.0"
edition = "2021"

[features]
default = ["ariadne"]
ariadne = ["dep:ariadne"]
annotate-snippets = ["dep:annotate-snippets"]

[dependencies]
ariadne = {version = "0.5.0", optional = true}
annotate-snippets = {version = "0.11.5", optional = true}
nacre_compiler = {path = "../nacre_compiler"}
nacre_parser = {path = "../nacre_parser"}
tokio = {version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync"]}

[dev-dependencies]
criterion = {version = "0.5", features = ["html_reports", "async_tokio"]}
serial_test = "3.2.0"

[[bench]]
name = "std"
harness = false

[lints.clippy]
too_many_lines = "warn"
