[package]
name = "nacre_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
nacre_kernel = {path = "../nacre_kernel"}
nacre_parser = {path = "../nacre_parser"}
tokio = {version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync"]}

[lints.clippy]
too_many_lines = "warn"
