[package]
name = "nacre_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
inkwell = {git = "https://github.com/TheDan64/inkwell.git", rev= "03c0c6b1842afc438a9ec299efc5386bf52e92e1", features = ["llvm18-0"]}
llvm-sys-181 = { package = "llvm-sys", version = "181", features = ["prefer-dynamic"] }
nacre_kernel = {path = "../nacre_kernel"}
nacre_parser = {path = "../nacre_parser"}
tokio = {version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync"]}

[lints.clippy]
too_many_lines = "warn"
