[package]
name = "rooster"
version = "0.1.0"
edition = "2021"

[features]
default = ["ariadne"]
ariadne = ["dep:ariadne"]
annotate-snippets = ["dep:annotate-snippets"]

[dependencies]
ariadne = {version = "0.4.1", optional = true}
annotate-snippets = {version = "0.11.3", optional = true}
rooster_parser = {path = "../rooster_parser"}
tokio = {version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync"]}

[dev-dependencies]
criterion = {version = "0.5", features = ["html_reports", "async_tokio"]}

[[bench]]
name = "std"
harness = false
